--- a/src/DroneMonitor/style/DroneMonitor.css
+++ b/src/DroneMonitor/style/DroneMonitor.css
@@ -4,7 +4,24 @@
     position: relative;
 }
 
-.shadow-container {
+.shadow-container-no-alarm {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 2;
+    height: 100%;
+    width: 100%;
+    pointer-events: none;
+    /*box-sizing: border-box;*/
+    /*border-color: #ff0000;*/
+    /*border-style: solid;*/
+    /*animation-duration: 500ms;*/
+    /*animation-name: map-border;*/
+    /*animation-iteration-count: infinite;*/
+    /*animation-direction: alternate;*/
+}
+
+.shadow-container-alarm {
     position: absolute;
     left: 0;
     top: 0;
@@ -32,7 +49,7 @@
 
 @keyframes map-border {
     from {
-        border-width: 5px;
+        border-width: 8px;
     }
 
     to {
