--- a/src/DroneMonitor/style/DroneMonitor.css
+++ b/src/DroneMonitor/style/DroneMonitor.css
@@ -54,3 +54,41 @@
     }
 }
 
+@font-face {
+    font-family: "Avenir Next W00";
+    src: url("../fonts/avenir-next/Avenir_Next_W00_400.eot?#iefix");
+    src: url("../fonts/avenir-next/Avenir_Next_W00_400.eot?#iefix") format("eot"), url("../fonts/avenir-next/Avenir_Next_W00_400.woff2") format("woff2"), url("../fonts/avenir-next/Avenir_Next_W00_400.woff") format("woff"), url("../fonts/avenir-next/Avenir_Next_W00_400.ttf") format("truetype"), url("../fonts/avenir-next/Avenir_Next_W00_400.svg") format("svg");
+    font-weight: 400;
+    font-style: normal
+  }
+  
+  @font-face {
+    font-family: "Avenir Next W00";
+    src: url("../fonts/avenir-next/Avenir_Next_W00_Italic_400.eot?#iefix");
+    src: url("../fonts/avenir-next/Avenir_Next_W00_Italic_400.eot?#iefix") format("eot"), url("../fonts/avenir-next/Avenir_Next_W00_Italic_400.woff2") format("woff2"), url("../fonts/avenir-next/Avenir_Next_W00_Italic_400.woff") format("woff"), url("../fonts/avenir-next/Avenir_Next_W00_Italic_400.ttf") format("truetype"), url("../fonts/avenir-next/Avenir_Next_W00_Italic_400.svg") format("svg");
+    font-weight: 400;
+    font-style: italic
+  }
+  
+  @font-face {
+    font-family: "Avenir Next W00";
+    src: url("../fonts/avenir-next/Avenir_Next_W00_600.eot?#iefix");
+    src: url("../fonts/avenir-next/Avenir_Next_W00_600.eot?#iefix") format("eot"), url("../fonts/avenir-next/Avenir_Next_W00_600.woff2") format("woff2"), url("../fonts/avenir-next/Avenir_Next_W00_600.woff") format("woff"), url("../fonts/avenir-next/Avenir_Next_W00_600.ttf") format("truetype"), url("../fonts/avenir-next/Avenir_Next_W00_600.svg") format("svg");
+    font-weight: 600;
+    font-style: normal
+  }
+  
+  @font-face {
+    font-family: "Avenir Next W00";
+    src: url("../fonts/avenir-next/Avenir_Next_W00_Italic_600.eot?#iefix");
+    src: url("../fonts/avenir-next/Avenir_Next_W00_Italic_600.eot?#iefix") format("eot"), url("../fonts/avenir-next/Avenir_Next_W00_Italic_600.woff2") format("woff2"), url("../fonts/avenir-next/Avenir_Next_W00_Italic_600.woff") format("woff"), url("../fonts/avenir-next/Avenir_Next_W00_Italic_600.ttf") format("truetype"), url("../fonts/avenir-next/Avenir_Next_W00_Italic_600.svg") format("svg");
+    font-weight: 600;
+    font-style: italic
+  }
+  
+  @font-face {
+    font-family: 'CalciteWebCoreIcons';
+    src: url("../fonts/icons/fonts/CalciteWebCoreIcons.ttf?iz9r4h") format("truetype"), url("../fonts/icons/fonts/CalciteWebCoreIcons.woff?iz9r4h") format("woff"), url("../fonts/icons/fonts/CalciteWebCoreIcons.svg?iz9r4h#CalciteWebCoreIcons") format("svg");
+    font-weight: normal;
+    font-style: normal
+  }
